// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetTypesSelector should render correctly with no target types 1`] = `
.c1.c1 {
  font-size: 22px;
  padding-right: 10px;
}

.c2.c2 {
  width: 18px;
  height: 18px;
}

.c0.c0 {
  margin-top: 5px;
}

.c0 label {
  padding-right: 10px;
}

<TargetTypesSelector
  onChange={[MockFunction]}
  targetTypes={Set {}}
>
  <styled.div>
    <div
      className="c0"
    >
      <label>
        <label>
          <styled.span>
            <span
              className="c1 span"
            >
              <styled.input
                checked={false}
                data-test="galaxy"
                onChange={[Function]}
                value="Galaxy"
              >
                <input
                  checked={false}
                  className="c2 checkbox"
                  data-test="galaxy"
                  onChange={[Function]}
                  type="checkbox"
                  value="Galaxy"
                />
              </styled.input>
            </span>
          </styled.span>
          Galaxy
        </label>
      </label>
      <label>
        <styled.span>
          <span
            className="c1 span"
          >
            <styled.input
              checked={false}
              data-test="ism"
              onChange={[Function]}
              value="ISM"
            >
              <input
                checked={false}
                className="c2 checkbox"
                data-test="ism"
                onChange={[Function]}
                type="checkbox"
                value="ISM"
              />
            </styled.input>
          </span>
        </styled.span>
        ISM
      </label>
      <label>
        <styled.span>
          <span
            className="c1 span"
          >
            <styled.input
              checked={false}
              data-test="solar-system-body"
              onChange={[Function]}
              value="Solar System Body"
            >
              <input
                checked={false}
                className="c2 checkbox"
                data-test="solar-system-body"
                onChange={[Function]}
                type="checkbox"
                value="Solar System Body"
              />
            </styled.input>
          </span>
        </styled.span>
        Solar System Body
      </label>
      <label>
        <styled.span>
          <span
            className="c1 span"
          >
            <styled.input
              checked={false}
              data-test="star"
              onChange={[Function]}
              value="Star"
            >
              <input
                checked={false}
                className="c2 checkbox"
                data-test="star"
                onChange={[Function]}
                type="checkbox"
                value="Star"
              />
            </styled.input>
          </span>
        </styled.span>
        Star
      </label>
    </div>
  </styled.div>
</TargetTypesSelector>
`;

exports[`TargetTypesSelector should render correctly with target types 1`] = `
.c1.c1 {
  font-size: 22px;
  padding-right: 10px;
}

.c2.c2 {
  width: 18px;
  height: 18px;
}

.c0.c0 {
  margin-top: 5px;
}

.c0 label {
  padding-right: 10px;
}

<TargetTypesSelector
  onChange={[MockFunction]}
  targetTypes={
    Set {
      "Galaxy",
      "ISM",
    }
  }
>
  <styled.div>
    <div
      className="c0"
    >
      <label>
        <label>
          <styled.span>
            <span
              className="c1 span"
            >
              <styled.input
                checked={true}
                data-test="galaxy"
                onChange={[Function]}
                value="Galaxy"
              >
                <input
                  checked={true}
                  className="c2 checkbox"
                  data-test="galaxy"
                  onChange={[Function]}
                  type="checkbox"
                  value="Galaxy"
                />
              </styled.input>
            </span>
          </styled.span>
          Galaxy
        </label>
      </label>
      <label>
        <styled.span>
          <span
            className="c1 span"
          >
            <styled.input
              checked={true}
              data-test="ism"
              onChange={[Function]}
              value="ISM"
            >
              <input
                checked={true}
                className="c2 checkbox"
                data-test="ism"
                onChange={[Function]}
                type="checkbox"
                value="ISM"
              />
            </styled.input>
          </span>
        </styled.span>
        ISM
      </label>
      <label>
        <styled.span>
          <span
            className="c1 span"
          >
            <styled.input
              checked={false}
              data-test="solar-system-body"
              onChange={[Function]}
              value="Solar System Body"
            >
              <input
                checked={false}
                className="c2 checkbox"
                data-test="solar-system-body"
                onChange={[Function]}
                type="checkbox"
                value="Solar System Body"
              />
            </styled.input>
          </span>
        </styled.span>
        Solar System Body
      </label>
      <label>
        <styled.span>
          <span
            className="c1 span"
          >
            <styled.input
              checked={false}
              data-test="star"
              onChange={[Function]}
              value="Star"
            >
              <input
                checked={false}
                className="c2 checkbox"
                data-test="star"
                onChange={[Function]}
                type="checkbox"
                value="Star"
              />
            </styled.input>
          </span>
        </styled.span>
        Star
      </label>
    </div>
  </styled.div>
</TargetTypesSelector>
`;
